--- a/httpquery-facade/pom.xml
+++ b/httpquery-facade/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.colin.httpquery</groupId>
+		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -14,6 +14,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
-
+	
 </project>
