--- a/httpquery-jackson/pom.xml
+++ b/httpquery-jackson/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.colin.httpquery</groupId>
+		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -11,7 +11,7 @@
 	<name>${project.artifactId}</name>
 	<dependencies>
 		<dependency>
-			<groupId>org.colin.httpquery</groupId>
+			<groupId>net.gcolin.httpquery</groupId>
 			<artifactId>httpquery-facade</artifactId>
 		</dependency>
 		<dependency>
