--- a/httpquery-examples/pom.xml
+++ b/httpquery-examples/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jasper</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
