--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,17 @@
 	<artifactId>httpquery</artifactId>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
+	<url>http://gcolin.net/httpquery</url>
+	<description>httpquery parent project</description>
+	
+	<licenses>
+	    <license>
+	      <name>The Apache Software License, Version 2.0</name>
+	      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+	      <distribution>repo</distribution>
+	    </license>
+	</licenses>
 
 	<modules>
 		<module>httpquery-facade</module>
@@ -128,33 +138,23 @@
 	                <execution>
 	                    <goals>
 	                        <goal>jar</goal>
-	                        <goal>test-jar</goal>
 	                    </goals>
 	                </execution>
 	            </executions>
 	        </plugin>
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-jar-plugin</artifactId>
+	            <artifactId>maven-javadoc-plugin</artifactId>
 	            <executions>
-	                <execution>
-	                    <goals>
-	                        <goal>test-jar</goal>
-	                    </goals>
-	                </execution>
-	            </executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 	        </plugin>
 	        
 		</plugins>
-		
-  <pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>sonar-maven-plugin</artifactId>
-        <version>2.0</version>
-      </plugin>
-    </plugins>
-  </pluginManagement>
 	</build>
 </project>
