--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,24 @@
 	<url>http://gcolin.net/httpquery</url>
 	<description>httpquery parent project</description>
 	
+	<parent>
+	    <groupId>org.sonatype.oss</groupId>
+	    <artifactId>oss-parent</artifactId>
+	    <version>7</version>
+  	</parent>
+
 	<scm>
-	    <connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
-	    <developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection>
-	    <url>git@github.com:gcolin/HttpQuery.git</url>
-	  </scm>
-	
+		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
+		<developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection>
+		<url>git@github.com:gcolin/HttpQuery.git</url>
+	</scm>
+
 	<licenses>
-	    <license>
-	      <name>The Apache Software License, Version 2.0</name>
-	      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-	      <distribution>repo</distribution>
-	    </license>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
 	</licenses>
 
 	<modules>
@@ -31,7 +37,7 @@
 		<module>httpquery-jackson</module>
 		<module>httpquery-examples</module>
 	</modules>
-	
+
 	<properties>
 		<slf4j.version>1.6.6</slf4j.version>
 		<junit.version>4.4</junit.version>
@@ -138,20 +144,20 @@
 				<version>2.4.2</version>
 			</plugin>
 			<plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-source-plugin</artifactId>
-	            <executions>
-	                <execution>
-	                    <goals>
-	                        <goal>jar</goal>
-	                    </goals>
-	                </execution>
-	            </executions>
-	        </plugin>
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-javadoc-plugin</artifactId>
-	            <executions>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
 					<execution>
 						<id>attach-javadocs</id>
 						<goals>
@@ -159,8 +165,20 @@
 						</goals>
 					</execution>
 				</executions>
-	        </plugin>
-	        
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
