--- a/httpquery-examples/pom.xml
+++ b/httpquery-examples/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>httpquery-examples</artifactId>
 	<packaging>jar</packaging>
