--- a/pom.xml
+++ b/pom.xml
@@ -9,25 +9,25 @@
 	<url>http://gcolin.net/httpquery</url>
 	<description>httpquery parent project</description>
 	
-	<parent>
-	    <groupId>org.sonatype.oss</groupId>
-	    <artifactId>oss-parent</artifactId>
-	    <version>7</version>
-  	</parent>
+<!-- 	<parent> -->
+<!-- 	    <groupId>org.sonatype.oss</groupId> -->
+<!-- 	    <artifactId>oss-parent</artifactId> -->
+<!-- 	    <version>7</version> -->
+<!--   	</parent> -->
 
-	<scm>
-		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
-		<developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection>
-		<url>git@github.com:gcolin/HttpQuery.git</url>
-	</scm>
+<!-- 	<scm> -->
+<!-- 		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection> -->
+<!-- 		<developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection> -->
+<!-- 		<url>git@github.com:gcolin/HttpQuery.git</url> -->
+<!-- 	</scm> -->
 
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+<!-- 	<licenses> -->
+<!-- 		<license> -->
+<!-- 			<name>The Apache Software License, Version 2.0</name> -->
+<!-- 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url> -->
+<!-- 			<distribution>repo</distribution> -->
+<!-- 		</license> -->
+<!-- 	</licenses> -->
 
 	<modules>
 		<module>httpquery-facade</module>
@@ -166,19 +166,19 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-gpg-plugin</artifactId> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>sign-artifacts</id> -->
+<!-- 						<phase>verify</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>sign</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 		</plugins>
 	</build>
 </project>
