--- a/httpquery-examples/pom.xml
+++ b/httpquery-examples/pom.xml
@@ -12,11 +12,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>net.gcolin.httpquery</groupId>
-			<artifactId>httpquery-xstream</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>net.gcolin.httpquery</groupId>
-			<artifactId>httpquery-httpclient</artifactId>
+			<artifactId>httpquery-simple</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.gcolin.httpquery</groupId>
@@ -36,12 +32,8 @@
 			<artifactId>tomcat-embed-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-jasper</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
 		</dependency>
 	</dependencies>
 
