--- a/httpquery-simple/pom.xml
+++ b/httpquery-simple/pom.xml
@@ -6,17 +6,13 @@
 		<artifactId>httpquery</artifactId>
 		<version>1.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>httpquery-xstream</artifactId>
+	<artifactId>httpquery-simple</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<dependencies>
 		<dependency>
 			<groupId>net.gcolin.httpquery</groupId>
 			<artifactId>httpquery-facade</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.thoughtworks.xstream</groupId>
-			<artifactId>xstream</artifactId>
 		</dependency>
 	</dependencies>
 
