--- a/pom.xml
+++ b/pom.xml
@@ -32,19 +32,17 @@
 	<modules>
 		<module>httpquery-facade</module>
 		<module>httpquery-httpclient</module>
-		<module>httpquery-xstream</module>
+		<module>httpquery-simple</module>
 		<module>httpquery-mock</module>
 		<module>httpquery-jackson</module>
 		<module>httpquery-examples</module>
 	</modules>
 
 	<properties>
-		<slf4j.version>1.6.6</slf4j.version>
 		<junit.version>4.4</junit.version>
 		<httpclient.version>4.2.1</httpclient.version>
-		<xstream.version>1.4.3</xstream.version>
 		<commonio.version>2.4</commonio.version>
-		<tomcat.version>7.0.25</tomcat.version>
+		<tomcat.version>8.0.9</tomcat.version>
 	</properties>
 
 	<dependencyManagement>
@@ -56,13 +54,18 @@
 			</dependency>
 			<dependency>
 				<groupId>net.gcolin.httpquery</groupId>
-				<artifactId>httpquery-httpclient</artifactId>
+				<artifactId>httpquery-simple</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.gcolin.httpquery</groupId>
-				<artifactId>httpquery-xstream</artifactId>
+				<artifactId>httpquery-httpclient</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commonio.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.gcolin.httpquery</groupId>
@@ -80,35 +83,15 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.thoughtworks.xstream</groupId>
-				<artifactId>xstream</artifactId>
-				<version>${xstream.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commonio.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tomcat</groupId>
@@ -134,8 +117,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -154,18 +137,18 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-javadoc-plugin</artifactId> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>attach-javadocs</id> -->
+<!-- 						<goals> -->
+<!-- 							<goal>jar</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 <!-- 			<plugin> -->
 <!-- 				<groupId>org.apache.maven.plugins</groupId> -->
 <!-- 				<artifactId>maven-gpg-plugin</artifactId> -->
