--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,13 @@
 		<module>httpquery-httpclient</module>
 		<module>httpquery-simple</module>
 		<module>httpquery-mock</module>
-		<module>httpquery-jackson</module>
+		<module>httpquery-json</module>
 		<module>httpquery-examples</module>
 	</modules>
 
 	<properties>
 		<junit.version>4.4</junit.version>
-		<httpclient.version>4.2.1</httpclient.version>
+		<httpclient.version>4.2.5</httpclient.version>
 		<commonio.version>2.4</commonio.version>
 		<tomcat.version>8.0.9</tomcat.version>
 	</properties>
@@ -115,10 +115,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
+				<version>2.4</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -126,17 +127,17 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<version>2.4.2</version>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-source-plugin</artifactId> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<goals> -->
+<!-- 							<goal>jar</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 <!-- 			<plugin> -->
 <!-- 				<groupId>org.apache.maven.plugins</groupId> -->
 <!-- 				<artifactId>maven-javadoc-plugin</artifactId> -->
