--- a/pom.xml
+++ b/pom.xml
@@ -16,19 +16,19 @@
 	<!-- <version>7</version> -->
 	<!-- </parent> -->
 
-	<!-- <scm> -->
-	<!-- <connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection> -->
-	<!-- <developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection> -->
-	<!-- <url>git@github.com:gcolin/HttpQuery.git</url> -->
-	<!-- </scm> -->
+	<scm>
+		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
+		<developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection>
+		<url>git@github.com:gcolin/HttpQuery.git</url>
+	</scm>
 
-	<!-- <licenses> -->
-	<!-- <license> -->
-	<!-- <name>The Apache Software License, Version 2.0</name> -->
-	<!-- <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url> -->
-	<!-- <distribution>repo</distribution> -->
-	<!-- </license> -->
-	<!-- </licenses> -->
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<modules>
 		<module>httpquery-facade</module>
@@ -139,29 +139,29 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<version>2.4.2</version>
 			</plugin>
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.maven.plugins</groupId> -->
-			<!-- <artifactId>maven-source-plugin</artifactId> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <goals> -->
-			<!-- <goal>jar</goal> -->
-			<!-- </goals> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.maven.plugins</groupId> -->
-			<!-- <artifactId>maven-javadoc-plugin</artifactId> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>attach-javadocs</id> -->
-			<!-- <goals> -->
-			<!-- <goal>jar</goal> -->
-			<!-- </goals> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- <plugin> -->
 			<!-- <groupId>org.apache.maven.plugins</groupId> -->
 			<!-- <artifactId>maven-gpg-plugin</artifactId> -->
