[maven-release-plugin] prepare for next development iteration

--- a/httpquery-json/pom.xml
+++ b/httpquery-json/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>httpquery-json</artifactId>
 	<packaging>jar</packaging>
