--- a/httpquery-examples/pom.xml
+++ b/httpquery-examples/pom.xml
@@ -15,13 +15,20 @@
 		</dependency>
 		<dependency>
 			<groupId>net.gcolin.httpquery</groupId>
-			<artifactId>httpquery-json</artifactId>
+			<artifactId>httpquery-jackson</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.gcolin.httpquery</groupId>
 			<artifactId>httpquery-mock</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>net.gcolin.httpquery</groupId>
+			<artifactId>httpquery-jaxb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.gcolin.httpquery</groupId>
+			<artifactId>httpquery-obj</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
