--- a/httpquery-gson/pom.xml
+++ b/httpquery-gson/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.3-SNAPSHOT</version>
 	</parent>
-	<artifactId>httpquery-json</artifactId>
+	<artifactId>httpquery-gson</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<dependencies>
@@ -15,9 +16,8 @@
 			<artifactId>httpquery-facade</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.juikito</groupId>
-			<artifactId>juikito-rs-json</artifactId>
-			<version>0.1</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
 		</dependency>
 	</dependencies>
 
