--- a/httpquery-jaxb/pom.xml
+++ b/httpquery-jaxb/pom.xml
@@ -5,7 +5,7 @@
 		<artifactId>httpquery</artifactId>
 		<version>1.3-SNAPSHOT</version>
 	</parent>
-	<artifactId>httpquery-jackson</artifactId>
+	<artifactId>httpquery-jaxb</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<dependencies>
