--- a/httpquery-obj/pom.xml
+++ b/httpquery-obj/pom.xml
@@ -5,17 +5,13 @@
 		<artifactId>httpquery</artifactId>
 		<version>1.3-SNAPSHOT</version>
 	</parent>
-	<artifactId>httpquery-jackson</artifactId>
+	<artifactId>httpquery-obj</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<dependencies>
 		<dependency>
 			<groupId>net.gcolin.httpquery</groupId>
 			<artifactId>httpquery-facade</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
 		</dependency>
 	</dependencies>
 
