--- a/httpquery-gson/pom.xml
+++ b/httpquery-gson/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.5</version>
+		<version>1.6-SNAPSHOT</version>
 	</parent>
 	<artifactId>httpquery-gson</artifactId>
 	<packaging>jar</packaging>
