[maven-release-plugin] prepare release httpquery-1.6

--- a/httpquery-xml/pom.xml
+++ b/httpquery-xml/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.6-SNAPSHOT</version>
+		<version>1.6</version>
 	</parent>
 	<artifactId>httpquery-xml</artifactId>
 	<packaging>jar</packaging>
