--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.gcolin.httpquery</groupId>
 	<artifactId>httpquery</artifactId>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
-	<version>1.6-SNAPSHOT</version>
+	<version>1.6</version>
 	<url>http://gcolin.net/httpquery</url>
 	<description>httpquery parent project</description>
 
@@ -20,7 +18,7 @@
 		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
 		<developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection>
 		<url>git@github.com:gcolin/HttpQuery.git</url>
-		<tag>HEAD</tag>
+		<tag>httpquery-1.6</tag>
 	</scm>
 
 	<licenses>
