[maven-release-plugin] prepare for next development iteration

--- a/httpquery-jaxb/pom.xml
+++ b/httpquery-jaxb/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.8</version>
+		<version>1.9-SNAPSHOT</version>
 	</parent>
 	<artifactId>httpquery-jaxb</artifactId>
 	<packaging>jar</packaging>
