--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 	<!-- <artifactId>oss-parent</artifactId> -->
 	<!-- <version>7</version> -->
 	<!-- </parent> -->
+	
+	<!-- mvn release:clean release:prepare -->
 
 	<scm>
 		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
@@ -48,7 +50,7 @@
 		<httpclient.version>4.5.6</httpclient.version>
 		<commonio.version>2.4</commonio.version>
 		<tomcat.version>8.5.40</tomcat.version>
-		<jackson.version>2.9.9.3</jackson.version>
+		<jackson.version>2.10.0</jackson.version>
 		<gson.version>2.8.5</gson.version>
 		<xstream.version>1.4.11</xstream.version>
 		<jaxb.version>2.3.1</jaxb.version>
