--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>httpquery</artifactId>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
-	<version>1.9</version>
+	<version>1.10-SNAPSHOT</version>
 	<url>http://gcolin.net/httpquery</url>
 	<description>httpquery parent project</description>
 
@@ -20,7 +20,7 @@
 		<connection>scm:git:git@github.com:gcolin/HttpQuery.git</connection>
 		<developerConnection>scm:git:git@github.com:gcolin/HttpQuery.git</developerConnection>
 		<url>git@github.com:gcolin/HttpQuery.git</url>
-		<tag>httpquery-1.9</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<licenses>
