--- a/httpquery-simple/pom.xml
+++ b/httpquery-simple/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>net.gcolin.httpquery</groupId>
 		<artifactId>httpquery</artifactId>
-		<version>1.10</version>
+		<version>1.11-SNAPSHOT</version>
 	</parent>
 	<artifactId>httpquery-simple</artifactId>
 	<packaging>jar</packaging>
